Added some test scenarios for Flyway

--- a/spring-boot-flyway/src/main/resources/application.properties
+++ b/spring-boot-flyway/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.servlet.multipart.enabled=false
 # Set active profile here for testing
 spring.profiles.active=postgres
 #spring.profiles.active=mysql
+db.host=localhost
 
 # Helping initial schema generation
 #spring.jpa.hibernate.ddl-auto=create
@@ -22,6 +23,8 @@ spring.profiles.active=postgres
 ### Flyway
 
 spring.flyway.locations=classpath:db/migration/common,classpath:db/migration/{vendor}
+#spring.flyway.table=flyway_schema_history
+spring.flyway.placeholders.service.prefix=
 
 ### Actuator
 
