--- a/docker-compose/docker-compose.dbs.yml
+++ b/docker-compose/docker-compose.dbs.yml
@@ -4,6 +4,10 @@ services:
   postgres:
     image: postgres:10.5
     restart: always
+    networks:
+      test:
+        aliases:
+          - postgres
     environment:
       POSTGRES_PASSWORD: password
     ports:
@@ -13,6 +17,10 @@ services:
     image: mysql:8.0.13
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    networks:
+      test:
+        aliases:
+          - mysql
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: mysqldb
@@ -21,3 +29,6 @@ services:
     ports:
       - "3306:3306"
 
+networks:
+  test:
+    external: true
