--- a/spring-boot-flyway/src/main/resources/application-mysql.properties
+++ b/spring-boot-flyway/src/main/resources/application-mysql.properties
@@ -2,7 +2,7 @@
 
 ### MySQL datasource config
 
-spring.datasource.url=jdbc:mysql://localhost/mysqldb
+spring.datasource.url=jdbc:mysql://${db.host}/mysqldb
 spring.datasource.username=mysql
 spring.datasource.password=password
 #spring.datasource.driver-class-name=
