--- a/spring-boot-flyway/src/main/resources/application-postgres.properties
+++ b/spring-boot-flyway/src/main/resources/application-postgres.properties
@@ -2,7 +2,7 @@
 
 ### Postgres datasource config
 
-spring.datasource.url=jdbc:postgresql://localhost/postgres
+spring.datasource.url=jdbc:postgresql://${db.host}/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
 #spring.datasource.driver-class-name=
